--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tronmart</title>
-    <link rel="icon" href="/image/Logo.jpg" />
+    <link rel="icon" href="image/Logo.jpg" />
     <link rel="stylesheet" href="index.css" type="text/tailwindcss" />
     <script>
       tailwind.config = {
@@ -89,7 +89,7 @@
             </button>
             <img
               class="ml-5 lg:ml-0"
-              src="/image/electronic-store-logo.svg"
+              src="image/electronic-store-logo.svg"
               alt=""
             />
           </div>
@@ -188,8 +188,8 @@
       <div class="h-[20%]">
         <div class="lg:container container2 mx-auto h-full">
           <div class="sm:flex block justify-between items-center py-10 h-full">
-            <img class="lg:w-full md:w-80 w-full sm:mr-2" src="/image/banner1.jpg" alt="" />
-            <img class="lg:w-full md:w-80 w-full sm:mt-0 mt-2" src="/image/benner2.jpg" alt="" />
+            <img class="lg:w-full md:w-80 w-full sm:mr-2" src="image/banner1.jpg" alt="" />
+            <img class="lg:w-full md:w-80 w-full sm:mt-0 mt-2" src="image/benner2.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -205,7 +205,7 @@
         <div class="sm:flex grid sm:justify-between sm:items-start sm:mt-20 gap-20 justify-center items-center w-full py-8 h-full">
           <img
             class="items-start"
-            src="./image/electronic-store-logo-mono.svg"
+            src="image/electronic-store-logo-mono.svg"
             alt=""
           />
           <div class="">
@@ -277,7 +277,7 @@
           <p class="text-gray-400 text-sm">
             © 2023 Electronic Store. Powered by Electronic Store
           </p>
-          <img src="/image/visa.png" alt="" />
+          <img src="image/visa.png" alt="" />
         </div>
       </div>
     </div>
