--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <a class="text-white">Refrigerator</a>
           <a class="text-white" href="/index.html" target="/New arrivals">New arrivals</a>
           <a class="text-white">Today's deal</a>
-          <h1>Gift Card</h1>
+          <a class="text-white" href="contact.html" target="/Contact">Contact</a>
           <i class="fa-solid fa-bag-shopping text-white"></i>
           <p>Log in</p>
         </div>
@@ -158,7 +158,7 @@
                     <a class="text-sm" href="">Today's deal</a>
                   </li>
                   <li class="leading-10">
-                    <a class="text-sm" href="">Gift Card</a>
+                    <a class="text-sm" href="/contact.html" target="/Contact">Contact</a>
                   </li>
             </div>
               </div>
