--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
             >New arrivals</a
           >
           <a class="text-white">Today's deal</a>
-          <a class="text-white">Gift Card</a>
+          <a class="text-white" href="contact.html" target="/Contact">Contact</a>
           <i class="fa-solid fa-bag-shopping text-white"></i>
           <p>Log in</p>
         </div>
