--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
               <a class="text-sm" href="">Today's deal</a>
             </li>
             <li class="leading-10">
-              <a class="text-sm" href="">Gift Card</a>
+              <a class="text-sm" href="contact.html" target="/Contact">Contact</a>
             </li>
           </div>
         </div>
